Fixed spacing, added fullpage to about

--- a/cabinFever/style.scss
+++ b/cabinFever/style.scss
@@ -51,6 +51,7 @@ body {
     position: relative;
     top: 0px;
     left: 0px;
+    max-width: 100%;
 
     .layer0 {
         background: rgba(68, 68, 68, 0.7);
@@ -66,9 +67,11 @@ body {
     .layer-text {
         position: absolute;
         top: 45%;
+        left: 0px;
         z-index: 5;
         background-color: rgba(0, 0, 0, 0);
         color: $primary-color;
+        max-width: 90%;
     }
 }
 
